--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
         <!-- side nav -->
         <ul class="sidenav blue-grey lighten-3" id="mobile-nav">
             <li><a href="#about">About Us</a></li>
-            <li><a href="#client">Clients</a></li>
             <li><a href="#service">Services</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#client">Clients</a></li>
             <li><a href="#contact">Contact Us</a></li>
+            <li><a href="">Join Us</a></li>
         </ul>
 
         <!-- navbar end -->
